[package]
name = "lyrebird"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
cfg-if = "1.0.0"
serde_json = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
time = { version = "0.3.9", features = ["formatting"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.126"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
