[package]
name = "lyrebird"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
cfg-if = "1.0.0"
serde_json = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
time = { version = "0.3.9", features = ["formatting"] }
# used only in test configuration, but cannot select according to https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
random-string = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.126"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.37.0", features = [ "Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_System_Environment" ] }